--- a/CV_chang_gao.tex
+++ b/CV_chang_gao.tex
@@ -18,19 +18,19 @@
 	University of Oklahoma\hfill\href{https://changao1.github.io}{https://changao1.github.io}\medskip\\
 Norman, OK   73019\hfill+1 (650) 732 6533\bigskip\\
 	\noindent{\bf Education}\medskip\\
-	PhD student, Economics, {\bf The University of Oklahoma}\hfill2022-\medskip\\
-    M.A. Economics, {\bf The Australian National University}\hfill2019-2021\medskip\\
-	B.A. Finance, {\bf Zhejiang Gongshang University}\hfill2015-2019\bigskip\\
+	PhD student, Economics, {\bf The University of Oklahoma, Norman, OK}\hfill2022-\medskip\\
+    MA in Economics, {\bf The Australian National University, Canberra, AU}\hfill2019-2021\medskip\\
+	BA Economics, {\bf Zhejiang Gongshang University, Hangzhou, CN}\hfill2015-2019\bigskip\\
 	{\bf Research Interest}\hfill Macro-finance, Empirical Macroeconomics Issues\bigskip\\
 	{\bf Work In Progress}\medskip\\
 %	Independent reading course paper (proposal): {\bf Mechanism and Outcome of Leveraging in China's Real Estate Market}\hfill12/2023\smallskip\\
 %	{\sl In China, real estate developers leverage through low-interest rates obtained by the down payment of pre-sale properties and holding land (as collateral), creating an expanding credit cycle. I plan to study this issue by using the financial accelerator proposed by BGG (1999), and use a HANK model to describe relationships among households(as investor or not), real estate developers, state-owned enterprises, local governments, and commercial banks. And predict the risk under shocks.}\medskip\\
 %	{\ RA for Dr. Firat Demir at OU}\hfill01/2023-05/2023\smallskip\\
 %	{\sl Collect and review papers on China-Middle East economic and political relationships}\medskip\\
-"Housing Purchase Restrictions and Wealth Inequality: Evidence from Anticipatory Behavior in China"\medskip\\
+Housing Purchase Restrictions and Wealth Inequality: Evidence from Anticipatory Behavior in China\medskip\\
 %"Demographic Change, Wealth Accumulation and Housing Market: Role of Housing Asset"\bigskip\\
 {\bf Conference Presentations}\medskip\\
-(Scheduled) 2025 Southern Economic Association Annual Meetings, Tampa, FL. \bigskip\\
+\{{\sl Scheduled}\} 2025 Southern Economic Association Annual Meetings, Tampa, FL. \bigskip\\
 	{\bf Teaching}\medskip\\
 	{\ Course Instructor @OU}
 	
@@ -40,7 +40,7 @@ Norman, OK   73019\hfill+1 (650) 732 6533\bigskip\\
 	{\bf Languages}\medskip\\
 	\begin{tabular}{ @{} >{}l @{\hspace{6ex}} l }
 		Language & English (Fluent), Chinese (Native), Japanese (Beginner)\\
-		Software & Python, MATLAB, Stata, \TeX Studio\\
+		Coding & Python, Stata, \TeX, Git\\
 	\end{tabular}\bigskip\\
 %	{\bf Scholarships}\medskip\\
 %	{Zhejiang Provincial Government Scholarship}, 6000 CNY\hfill 2016\smallskip\\
