--- a/CV_chang_gao.tex
+++ b/CV_chang_gao.tex
@@ -12,35 +12,39 @@
 %\rhead{Email: chang.gao@ou.edu}
 \begin{document}
 	\begin{center}
-		{\bf\LARGE CHANG GAO}
+		{\Large CHANG GAO}
 	\end{center}
 	\noindent Department of Economics\hfill chang.gao@ou.edu\medskip\\
 	University of Oklahoma\hfill\href{https://changao1.github.io}{https://changao1.github.io}\medskip\\
 Norman, OK   73019\hfill+1 (650) 732 6533\bigskip\\
 	\noindent{\bf Education}\medskip\\
-	PhD student, Economics, {\bf The University of Oklahoma, Norman, OK}\hfill2022-\medskip\\
-    MA in Economics, {\bf The Australian National University, Canberra, AU}\hfill2019-2021\medskip\\
-	BA Economics, {\bf Zhejiang Gongshang University, Hangzhou, CN}\hfill2015-2019\bigskip\\
+	PhD student, Economics, {\bf The University of Oklahoma}\hfill Norman, 2027 (expected)\medskip\\
+    MA in Economics, {\bf The Australian National University}\hfill Canberra, 2021\medskip\\
+	BA Economics, {\bf Zhejiang Gongshang University}\hfill Hangzhou, 2019\bigskip\\
 	{\bf Research Interest}\hfill Macro-finance, Empirical Macroeconomics Issues\bigskip\\
 	{\bf Work In Progress}\medskip\\
 %	Independent reading course paper (proposal): {\bf Mechanism and Outcome of Leveraging in China's Real Estate Market}\hfill12/2023\smallskip\\
 %	{\sl In China, real estate developers leverage through low-interest rates obtained by the down payment of pre-sale properties and holding land (as collateral), creating an expanding credit cycle. I plan to study this issue by using the financial accelerator proposed by BGG (1999), and use a HANK model to describe relationships among households(as investor or not), real estate developers, state-owned enterprises, local governments, and commercial banks. And predict the risk under shocks.}\medskip\\
 %	{\ RA for Dr. Firat Demir at OU}\hfill01/2023-05/2023\smallskip\\
 %	{\sl Collect and review papers on China-Middle East economic and political relationships}\medskip\\
-Housing Purchase Restrictions and Wealth Inequality: Evidence from Anticipatory Behavior in China\medskip\\
+Housing Purchase Restrictions and Wealth Inequality: Evidence from Anticipatory Behavior in China\smallskip\\
+How will Large Language Models impact the distribution of income between capital and labor?\medskip\\
 %"Demographic Change, Wealth Accumulation and Housing Market: Role of Housing Asset"\bigskip\\
 {\bf Conference Presentations}\medskip\\
-\{{\sl Scheduled}\} 2025 Southern Economic Association Annual Meetings, Tampa, FL. \bigskip\\
+2024 OU Econ PhD Conference\hfill Norman, OK\smallskip\\
+2024,2025 Applied Microeconomics Brown Bag\hfill Norman, OK\smallskip\\
+2025 OU -- Oklahoma State University Econ PhD Conference\hfill Norman, OK\smallskip\\
+2025 Southern Economic Association 95th Annual Meetings\hfill Tampa, FL\bigskip\\
 	{\bf Teaching}\medskip\\
 	{\ Course Instructor @OU}
 	
 	ECON2843: Elements of Statistics (Online $\times 1$, Winter 2025; In-person $\times 1$, Fall 2024)
 	
-	ECON1113: Principle of Macroeconomics(Online $\times 1$, Winter 2024)\bigskip\\
+	ECON1113: Principle of Macroeconomics (Online $\times 1$, Winter 2024)\bigskip\\
 	{\bf Languages}\medskip\\
 	\begin{tabular}{ @{} >{}l @{\hspace{6ex}} l }
 		Language & English (Fluent), Chinese (Native), Japanese (Beginner)\\
-		Coding & Python, Stata, \TeX, Git\\
+		Coding & Python, \TeX, Git\\
 	\end{tabular}\bigskip\\
 %	{\bf Scholarships}\medskip\\
 %	{Zhejiang Provincial Government Scholarship}, 6000 CNY\hfill 2016\smallskip\\
