Update CV with education, research, and skills revisions
Revised degree titles, research interests, and work in progress sections. Added work experience, updated conference presentations, and expanded coding skills. Adjusted formatting and location details for clarity and accuracy.

--- a/CV_chang_gao.tex
+++ b/CV_chang_gao.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,letterpaper]{article}
+\documentclass[10pt,letterpaper]{article}
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry}
 %\usepackage{mathpazo}
 \usepackage[colorlinks=true, urlcolor=blue]{hyperref}
@@ -18,21 +18,25 @@
 	University of Oklahoma\hfill\href{https://changao1.github.io}{https://changao1.github.io}\medskip\\
 Norman, OK   73019\hfill+1 (650) 732 6533\bigskip\\
 	\noindent{\bf Education}\medskip\\
-	PhD student, Economics, {\bf The University of Oklahoma}\hfill Norman, 2027 (expected)\medskip\\
-    MA in Economics, {\bf The Australian National University}\hfill Canberra, 2021\medskip\\
-	BA Economics, {\bf Zhejiang Gongshang University}\hfill Hangzhou, 2019\bigskip\\
-	{\bf Research Interest}\hfill Macro-finance, Empirical Macroeconomics Issues\bigskip\\
+	PhD in Econometrics and Quantitative Economics, {\bf University of Oklahoma}\hfill Norman, OK, 2027 (expected)\medskip\\
+    MA in Economics, {\bf Australian National University}\hfill Canberra, Australia, 2021\medskip\\
+	BA in Finance, {\bf Zhejiang Gongshang University}\hfill Hangzhou, China, 2019\bigskip\\
+	{\bf Research Interest}\hfill Housing Market, Household Finance, Macroeconomics\bigskip\\
+	{\bf Work Experience}\medskip\\
+		Research Assistant\medskip\\
 	{\bf Work In Progress}\medskip\\
 %	Independent reading course paper (proposal): {\bf Mechanism and Outcome of Leveraging in China's Real Estate Market}\hfill12/2023\smallskip\\
 %	{\sl In China, real estate developers leverage through low-interest rates obtained by the down payment of pre-sale properties and holding land (as collateral), creating an expanding credit cycle. I plan to study this issue by using the financial accelerator proposed by BGG (1999), and use a HANK model to describe relationships among households(as investor or not), real estate developers, state-owned enterprises, local governments, and commercial banks. And predict the risk under shocks.}\medskip\\
 %	{\ RA for Dr. Firat Demir at OU}\hfill01/2023-05/2023\smallskip\\
 %	{\sl Collect and review papers on China-Middle East economic and political relationships}\medskip\\
+Texas Housing Price\smallskip\\
+Understanding Housing Boom and Collapse in China\smallskip\\
 Housing Purchase Restrictions and Wealth Inequality: Evidence from Anticipatory Behavior in China\smallskip\\
 How will Large Language Models impact the distribution of income between capital and labor?\medskip\\
 %"Demographic Change, Wealth Accumulation and Housing Market: Role of Housing Asset"\bigskip\\
 {\bf Conference Presentations}\medskip\\
 2024 OU Econ PhD Conference\hfill Norman, OK\smallskip\\
-2024,2025 Applied Microeconomics Brown Bag\hfill Norman, OK\smallskip\\
+2024, 2025 Applied Microeconomics Brown Bag\hfill Norman, OK\smallskip\\
 2025 OU -- Oklahoma State University Econ PhD Conference\hfill Norman, OK\smallskip\\
 2025 Southern Economic Association 95th Annual Meetings\hfill Tampa, FL\bigskip\\
 	{\bf Teaching}\medskip\\
@@ -44,7 +48,7 @@ How will Large Language Models impact the distribution of income between capital
 	{\bf Languages}\medskip\\
 	\begin{tabular}{ @{} >{}l @{\hspace{6ex}} l }
 		Language & English (Fluent), Chinese (Native), Japanese (Beginner)\\
-		Coding & Python, \TeX, Git\\
+		Coding & Python, R, SQL, SAS, \TeX, Git\\
 	\end{tabular}\bigskip\\
 %	{\bf Scholarships}\medskip\\
 %	{Zhejiang Provincial Government Scholarship}, 6000 CNY\hfill 2016\smallskip\\
