--- a/CV_chang_gao.tex
+++ b/CV_chang_gao.tex
@@ -23,21 +23,26 @@ Norman, OK   73019\hfill+1 (650) 732 6533\bigskip\\
 	BA in Finance, {\bf Zhejiang Gongshang University}\hfill Hangzhou, China, 2019\bigskip\\
 	{\bf Research Interest}\hfill Housing Market, Household Finance, Macroeconomics\bigskip\\
 	{\bf Work Experience}\medskip\\
-		Research Assistant\medskip\\
+		Research Assistant @OU\hfill Norman, OK, 2022/8 $-$ 2022/12\smallskip
+		
+		Help Prof. Firat Demir survey literature of economic relationships between the Middle East and North Africa (MENA) and China\smallskip\\
+		Lecturer @Morange Education\hfill Canberra, Australia, 2022/1 $-$ 2022/6\smallskip
+		
+		Part-time lecturer of mathematical optimization and macroeconomics\medskip\\
 	{\bf Work In Progress}\medskip\\
 %	Independent reading course paper (proposal): {\bf Mechanism and Outcome of Leveraging in China's Real Estate Market}\hfill12/2023\smallskip\\
 %	{\sl In China, real estate developers leverage through low-interest rates obtained by the down payment of pre-sale properties and holding land (as collateral), creating an expanding credit cycle. I plan to study this issue by using the financial accelerator proposed by BGG (1999), and use a HANK model to describe relationships among households(as investor or not), real estate developers, state-owned enterprises, local governments, and commercial banks. And predict the risk under shocks.}\medskip\\
 %	{\ RA for Dr. Firat Demir at OU}\hfill01/2023-05/2023\smallskip\\
 %	{\sl Collect and review papers on China-Middle East economic and political relationships}\medskip\\
-Texas Housing Price\smallskip\\
+Texas Population Inflow and Stagnant Housing Prices after 2022\smallskip\\
 Understanding Housing Boom and Collapse in China\smallskip\\
 Housing Purchase Restrictions and Wealth Inequality: Evidence from Anticipatory Behavior in China\smallskip\\
-How will Large Language Models impact the distribution of income between capital and labor?\medskip\\
+How will Large Language Models Impact the Distribution of Income between Capital and Labor?\medskip\\
 %"Demographic Change, Wealth Accumulation and Housing Market: Role of Housing Asset"\bigskip\\
 {\bf Conference Presentations}\medskip\\
 2024 OU Econ PhD Conference\hfill Norman, OK\smallskip\\
 2024, 2025 Applied Microeconomics Brown Bag\hfill Norman, OK\smallskip\\
-2025 OU -- Oklahoma State University Econ PhD Conference\hfill Norman, OK\smallskip\\
+2025 OU -- Oklahoma State Econ PhD Conference\hfill Norman, OK\smallskip\\
 2025 Southern Economic Association 95th Annual Meetings\hfill Tampa, FL\bigskip\\
 	{\bf Teaching}\medskip\\
 	{\ Course Instructor @OU}
