--- a/CV_chang_gao.tex
+++ b/CV_chang_gao.tex
@@ -25,8 +25,8 @@ Norman, OK   73019\hfill+1 (650) 732 6533\bigskip\\
 	{\bf Work Experience}\medskip\\
 		Research Assistant @OU\hfill Norman, OK, 2022/8 $-$ 2022/12\smallskip
 		
-		Help Prof. Firat Demir survey literature of economic relationships between the Middle East and North Africa (MENA) and China\smallskip\\
-		Lecturer @Morange Education\hfill Canberra, Australia, 2022/1 $-$ 2022/6\smallskip
+%		Help Prof. Firat Demir survey literature of economic relationships between the Middle East and North Africa (MENA) and China\smallskip\\
+		\noindent Lecturer @Morange Education\hfill Canberra, Australia, 2022/1 $-$ 2022/6\smallskip
 		
 		Part-time lecturer of mathematical optimization and macroeconomics\medskip\\
 	{\bf Work In Progress}\medskip\\
@@ -34,9 +34,9 @@ Norman, OK   73019\hfill+1 (650) 732 6533\bigskip\\
 %	{\sl In China, real estate developers leverage through low-interest rates obtained by the down payment of pre-sale properties and holding land (as collateral), creating an expanding credit cycle. I plan to study this issue by using the financial accelerator proposed by BGG (1999), and use a HANK model to describe relationships among households(as investor or not), real estate developers, state-owned enterprises, local governments, and commercial banks. And predict the risk under shocks.}\medskip\\
 %	{\ RA for Dr. Firat Demir at OU}\hfill01/2023-05/2023\smallskip\\
 %	{\sl Collect and review papers on China-Middle East economic and political relationships}\medskip\\
-Texas Population Inflow and Stagnant Housing Prices after 2022\smallskip\\
+% ?Texas Population Inflow and Stagnant Housing Prices after 2022\smallskip\\
 Understanding Housing Boom and Collapse in China\smallskip\\
-Housing Purchase Restrictions and Wealth Inequality: Evidence from Anticipatory Behavior in China\smallskip\\
+Housing Purchase Restrictions and Wealth Inequality: Evidence from Anticipatory Behavior under Policy Intervention\smallskip\\
 How will Large Language Models Impact the Distribution of Income between Capital and Labor?\medskip\\
 %"Demographic Change, Wealth Accumulation and Housing Market: Role of Housing Asset"\bigskip\\
 {\bf Conference Presentations}\medskip\\
