update some styles

--- a/assets/little_notes_on_DP.tex
+++ b/assets/little_notes_on_DP.tex
@@ -62,12 +62,12 @@
 		u'(f(k)-g(k))=\beta u'(f(g(k))-g(g(k)))f'(g(k))
 	\end{equation}
 \newpage
-\noindent{\bf Q6 from OU Fall 2022 Second midterm} Prove Shephard’s lemma using the envelope theorem\smallskip\\
+\noindent{\bf Q6 of OU Fall 2022 Microeconomics I $2^{\text{nd}}$ midterm} Prove Shephard’s lemma using the envelope theorem\smallskip\\
 {\it My solution}
 $$\min_x c=w\cdot x$$
 $$\text{s.t.}\ y=f(x)$$
 The Lagrangian $L(x,\lambda)=w\cdot x+\lambda\cdot(y-f(x))$,
-The FOC yields
+the FOC yields
 \begin{equation*}
 	\frac{\partial L}{\partial x}=w-\lambda\cdot f'(x)=0
 \end{equation*}
@@ -84,5 +84,5 @@ The FOC with respect to $w$ is
 	\end{aligned}
 \end{equation*}
 Since $w-\lambda^*\cdot f'(x)=0$ and $y-f(x^*)=0$ by the FOC of the first Lagrangian$$\frac{\partial L}{\partial w}=x^*(w,y)$$
-Therefore, $$\frac{\partial c(w,y)}{\partial w}=\frac{\partial L}{\partial w}=x^*(w,y).$$
+Therefore, $$\frac{\partial c(w,y)}{\partial w}=\frac{\partial L}{\partial w}=x^*(w,y)$$
 \end{document}
