update the resume

--- a/assets/resume_chang_gao.tex
+++ b/assets/resume_chang_gao.tex
@@ -18,7 +18,7 @@
 	University of Oklahoma\hfill\href{https://changao1.github.io}{https://changao1.github.io}\medskip\\
 Norman, OK   73019\hfill+1 (650) 732 6533\bigskip\\
 	\noindent{\bf Education}\medskip\\
-	PhD in Econometrics and Quantitative Economics, {\bf University of Oklahoma}\hfill Norman, OK, 2027 (expected)\medskip\\
+	PhD in Economics, {\bf University of Oklahoma}\hfill Norman, OK, 2027 (expected)\medskip\\
     MA in Economics, {\bf Australian National University}\hfill Canberra, Australia, 2021\medskip\\
 	BA in Finance, {\bf Zhejiang Gongshang University}\hfill Hangzhou, China, 2019\bigskip\\
 	{\bf Research Interest}\hfill Housing Market, Household Finance, Macroeconomics\bigskip\\
