update resume by add grants

--- a/assets/resume_chang_gao.tex
+++ b/assets/resume_chang_gao.tex
@@ -35,9 +35,9 @@ Norman, OK   73019\hfill+1 (650) 732 6533\bigskip\\
 %	{\ RA for Dr. Firat Demir at OU}\hfill01/2023-05/2023\smallskip\\
 %	{\sl Collect and review papers on China-Middle East economic and political relationships}\medskip\\
 % ?Texas Population Inflow and Stagnant Housing Prices after 2022\smallskip\\
-Understanding Housing Boom and Collapse in China\smallskip\\
+Understand Housing Boom and Collapse in China\smallskip\\
 Housing Purchase Restrictions and Wealth Inequality: Evidence from Anticipatory Behavior under Policy Intervention\smallskip\\
-How will Large Language Models Impact the Distribution of Income between Capital and Labor?\medskip\\
+How Will Large Language Models Impact the Distribution of Income between Capital and Labor?\medskip\\
 %"Demographic Change, Wealth Accumulation and Housing Market: Role of Housing Asset"\bigskip\\
 {\bf Conference Presentations}\medskip\\
 2024 OU Econ PhD Conference\hfill Norman, OK\smallskip\\
@@ -52,10 +52,11 @@ How will Large Language Models Impact the Distribution of Income between Capital
 	ECON1113: Principle of Macroeconomics (Online $\times 1$, Winter 2024)\bigskip\\
 	{\bf Languages}\medskip\\
 	\begin{tabular}{ @{} >{}l @{\hspace{6ex}} l }
-		Language & English (Fluent), Chinese (Native), Japanese (Beginner)\\
+		Language & English (Fluent), Chinese (Native)\\
 		Coding & Python, R, SQL, SAS, \TeX, Git\\
 	\end{tabular}\bigskip\\
-%	{\bf Scholarships}\medskip\\
+	{\bf Grants}\medskip\\
 %	{Zhejiang Provincial Government Scholarship}, 6000 CNY\hfill 2016\smallskip\\
 %	{Zhejiang Gongshang University First Price Scholarship}, 1200 CNY\hfill2016\\
+{OU Graduate School Robberson Travel Grant}\hfill 2025\smallskip\\
 \end{document}
